# PancakeSorting

./: .gitignore  CMakeLists.txt  GUIApp.py  Headers.h  Measures.py  Pancake presentation.pptx  PancakePile.cpp  PancakePile.h  README.md  Sort2Approximation.cpp  Sort2Approximation.h  Sort3Approximation.cpp  Sort3Approximation.h  SortExhaustive.cpp  SortExhaustive.h  SortPancakes.cpp  SortPancakes.h  main.cpp  measure.cpp  measure.ipynb  measure_2_3.cpp  user.cpp  user_GUI.cpp
pancake-files/: CMakeLists.txt  Sort2Approximation.cpp  Sort3Approximation.cpp  SortExhaustive.h  SortPancakes.cpp
pancake-files/include/: SortPancakes.h
pancake-files/src/: Sort2Approximation.cpp  Sort3Approximation.cpp  SortExhaustive.cpp  SortPancakes.cpp
pancake-tests/: 2approx-tests.cpp  3approx-tests.cpp  CMakeLists.txt
